--- a/style.less
+++ b/style.less
@@ -459,6 +459,8 @@ textarea.message_text {
 			font-size: 13px;
 			div, > span {
 				display: inline-block;
+			}
+			.evo_post__post_date, .evo_post__author a, .evo_post__comments {
 				margin-right: 25px;
 			}
 			letter-spacing: 1px;
@@ -599,7 +601,7 @@ textarea.message_text {
 // Masonry Posts layout
 .disp_posts .grid-item {
 	&.two-cols, &.three-cols {
-		float: left;
+		//float: left;
 		padding: 0 15px;
 		article {
 			margin-bottom: 15px;
@@ -622,19 +624,19 @@ textarea.message_text {
 }
 // Masonry responsive layout
 @media (min-width: 992px) {
-	.disp_posts .grid-item {
+	.disp_posts .grid .grid-item {
 		&.two-cols {
 			width: 50%;
 		}
 	}
-	.disp_posts .grid-item {
+	.disp_posts .grid .grid-item {
 		&.three-cols {
 			width: 50%;
 		}
 	}
 }
 @media (min-width: 1200px) {
-	.disp_posts .grid-item {
+	.disp_posts .grid .grid-item {
 		&.three-cols {
 			width: 33.333%;
 		}
@@ -655,8 +657,12 @@ textarea.message_text {
 }
 
 // Disp single navigation
-.pager {
-	li {
+.pager.special_pager_layout {
+	margin: 0 0 30px;
+	li a {
+		border-radius: 0;
+		padding: 12px 14px;
+		.transition-0.1s;
 	}
 }
 
@@ -677,6 +683,35 @@ textarea.message_text {
 		a:hover {
 			background-color: transparent;
 		}
+	}
+	&.evo_comment__meta {
+		.panel-heading {
+			border-bottom: none;
+			background-color: transparent;
+			.evo_comment_title {
+				padding-top: 0;
+			}
+		}
+		.panel-body {
+			padding-top: 0;
+		}
+	}
+}
+.evo_post_comment_notification p {
+	text-align: left;
+	a, a:hover, a:focus {
+		border: none;
+		background: transparent;
+		font-size: 16px;
+	}
+	a:hover {
+		text-decoration: underline;
+	}
+}
+.evo_post_feedback_feed_msg {
+	margin-bottom: 80px;
+	p {
+		text-align: left;
 	}
 }
 .evo_content_block  .evo_comment_avatar img {
@@ -961,7 +996,8 @@ footer.row {
 .widget_core_coll_post_list, // Recent posts
 .widget_core_coll_comment_list, // Recent comments
 .widget_core_coll_item_list, // Items list
-.widget_core_coll_xml_feeds { // XML Feeds
+.widget_core_coll_xml_feeds, // XML Feeds
+.widget_plugin_evo_Arch { // Archives widget
 	ul {
 		margin: 0;
 		li {
@@ -1006,6 +1042,25 @@ main {
 				position: absolute;
 				content: "\f101";
 				right: 15px;
+				vertical-align: middle;
+				display: inline-block;
+				font-family: FontAwesome;
+			}
+		}
+	}
+	
+	// Archives widget
+	.widget_plugin_evo_Arch {
+		ul li span.dimmed {
+			position: absolute;
+			right: 25px;
+			vertical-align: middle;
+			display: inline-block;
+			font-size: 16px;
+			&:before {
+				content: '\f187';
+				padding-right: 4px;
+				padding-bottom: 3px;
 				vertical-align: middle;
 				display: inline-block;
 				font-family: FontAwesome;
@@ -1138,9 +1193,35 @@ p.tag_cloud a {
 
 @media (max-width: 992px) {
 	.evo_container__sidebar, .evo_container__sidebar2 {
+		margin-top: 80px;
 		.widget_plugin_evo_Calr table {
-			width: 320px;
+			max-width: 320px;
 			margin: 0 auto;
 		}
 	}
+}
+
+
+
+
+// ****************************************************************************
+// Disp users module
+// ****************************************************************************
+@import "less/_users.disp.less";
+
+// ****************************************************************************
+// Disp sitemap module
+// ****************************************************************************
+@import "less/_sitemap.disp.less";
+
+// ****************************************************************************
+// Disp arcdir module
+// ****************************************************************************
+@import "less/_arcdir.disp.less";
+
+// ****************************************************************************
+// Disp comments
+// ****************************************************************************
+.disp_comments .comments-wrapper:first-child {
+	margin-top: 30px;
 }
